--- a/Stage-2/main.ipynb
+++ b/Stage-2/main.ipynb
@@ -152,11 +152,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Transformação de Dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# transformar coluna TotalCharges de String para Float "
+   ]
   }
  ],
  "metadata": {
