--- a/Stage-2/main.ipynb
+++ b/Stage-2/main.ipynb
@@ -4575,6 +4575,31 @@
    "source": [
     "df_churn.fillna(value={'TotalCharges': media_TotalCharges})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Distribuição em variáveis categóricas - ANALISE UNIVARIADA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# contar cliente usando a variavel churn como referencia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# como identificar possiveis valores unicos numa variavel do dataframe"
+   ]
   }
  ],
  "metadata": {
