--- a/Stage-4/main.ipynb
+++ b/Stage-4/main.ipynb
@@ -1,18 +1,31 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ALGORITMO DE REGRESSÃO LINEAR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# estudo sobre algoritmos de regressao"
+    "# estudo sobre algoritmos de regressao\n"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
